# Big-Data-Security-Project---Group-33

./: .gitignore  README.md  generate_configs.py  pyproject.toml  requirements.txt  run_experiment.py
configs/: fedasync_cifar10_c100_a0.1.yaml  fedasync_cifar10_c100_a0.5.yaml  fedasync_fmnist_c100_a0.1.yaml  fedasync_fmnist_c100_a0.5.yaml  fedavg_cifar10_c100_a0.01.yaml  fedavg_cifar10_c100_a0.1.yaml  fedavg_cifar10_c100_a0.5.yaml  fedavg_cifar10_c100_a1.0.yaml  fedavg_cifar10_c100_aiid.yaml  fedavg_cifar10_c10_a0.1.yaml  fedavg_cifar10_c10_a0.5.yaml  fedavg_cifar10_c10_aiid.yaml  fedavg_cifar10_c50_a0.1.yaml  fedavg_cifar10_c50_a0.5.yaml  fedavg_cifar10_c50_aiid.yaml  fedavg_fmnist_c100_a0.1.yaml  fedavg_fmnist_c100_a0.5.yaml  fedavg_fmnist_c100_aiid.yaml  fedavg_fmnist_c10_a0.1.yaml  fedavg_fmnist_c10_a0.5.yaml  fedavg_fmnist_c10_aiid.yaml  fedavg_fmnist_c50_a0.1.yaml  fedavg_fmnist_c50_a0.5.yaml  fedavg_fmnist_c50_aiid.yaml  fedavg_mnist_c100_a0.1.yaml  fedavg_mnist_c100_aiid.yaml  feddgc_cifar10_c100_a0.01.yaml  feddgc_cifar10_c100_a0.1.yaml  feddgc_cifar10_c100_a0.5.yaml  feddgc_cifar10_c100_a1.0.yaml  feddgc_cifar10_c100_aiid.yaml  feddgc_cifar10_c10_a0.1.yaml  feddgc_cifar10_c10_a0.5.yaml  feddgc_cifar10_c10_aiid.yaml  feddgc_cifar10_c50_a0.1.yaml  feddgc_cifar10_c50_a0.5.yaml  feddgc_cifar10_c50_aiid.yaml  feddgc_fmnist_c100_a0.1.yaml  feddgc_fmnist_c100_a0.5.yaml  feddgc_fmnist_c100_aiid.yaml  (+8 more)
poster/: beamercolorthememsu.sty  poster.tex
report/: main.tex  references.bib
scripts/: generate_all_plots.py  generate_plots.sh  prep.sh  user1.sh  user2.sh  (+2 more)
(+33 files in other folders)
